--- a/MovieBook/app/build.gradle
+++ b/MovieBook/app/build.gradle
@@ -32,7 +32,7 @@ android {
         buildFeatures {
             viewBinding true
         }
-    
+
 }
 
 dependencies {
@@ -44,4 +44,7 @@ dependencies {
     testImplementation libs.junit
     androidTestImplementation libs.ext.junit
     androidTestImplementation libs.espresso.core
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+
 }
